[package]
name = "day5"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = {workspace = true}
tracing-test = {workspace = true}
anyhow = {workspace = true}
regex = {workspace = true}
lazy_static = {workspace = true}
pathfinding = {workspace = true}
itertools = {workspace = true}
memoize = {workspace = true}
md5 = "0.7.0"                # The package provides the MD5 hash function.

[dependencies.utils]
path = "../utils"